<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Sport Club</string>
    <string name="logo_description" translatable="false">Sport Club Logo</string>

    <!-- Strings related to login -->
    <string name="title_activity_main">Main Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="title_activity_team">Team Activity</string>
    <string name="title_activity_match">Match Activity</string>

    <string name="facebook_app_id" translatable="false">248740825588294</string>

    <string name="version" translatable="false">1.0</string>
    <string name="help_text">Help</string>
    <string name="loading">Loading</string>
    <string name="profile_photo_desc">Profile Photo</string>
    <string name="edit_profile_nav">Edit Profile</string>
    <string name="preferences_nav">Preferences</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_account_key" translatable="false">account</string>
    <string name="pref_account_default" translatable="false">default</string>
    <string name="pref_account_google" translatable="false">google</string>
    <string name="pref_account_facebook" translatable="false">facebook</string>

    <string name="pref_user_name_key" translatable="false">user_name</string>
    <string name="pref_user_email_key" translatable="false">user_email</string>
    <string name="error_name">Error</string>
    <string name="error_email">error@error.com</string>
    <string name="pref_user_id_key" translatable="false">user_id</string>
    <string name="pref_user_id_default" translatable="false">1</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="prefs_signout">Sign Out</string>
    <string name="logout_summary">Sign out of your account</string>
    <string name="sign_out">Sign Out</string>
    <string name="item_image">Item image</string>
    <string name="offline_error">You\'re offline.</string>

    <!--Spinner-->
    <string-array name="soccer_position_array">
        <item />
        <item>Goalkeeper</item>
        <item>Center-Back</item>
        <item>Full-Back</item>
        <item>Center Midfield</item>
        <item>Defensive Midfield</item>
        <item>Attacking Midfield</item>
        <item>Wide Midfield</item>
        <item>Center Forward</item>
        <item>Second Striker</item>
        <item>Winger</item>
    </string-array>
    <!-- 10 positions-->
    <string-array name="soccer_position_abbrev">
        <item />
        <item>GK</item>
        <item>CB</item>
        <item>FB</item>
        <item>CM</item>
        <item>DM</item>
        <item>AM</item>
        <item>WM</item>
        <item>CF</item>
        <item>SS</item>
        <item>W</item>
    </string-array>

    <string-array name="basket_position_array">
        <item />
        <item>Point Guard</item>
        <item>Shooting Guard</item>
        <item>Small Forward</item>
        <item>Power Forward</item>
        <item>Center</item>
    </string-array>
    <!-- 5 positions-->
    <string-array name="basket_position_abbrev">
        <item />
        <item>PG</item>
        <item>SG</item>
        <item>SF</item>
        <item>PF</item>
        <item>C</item>
    </string-array>

    <string-array name="hand_array">
        <item />
        <item>Right</item>
        <item>Left</item>
    </string-array>

    <!--Supported sports Soccer Basketball-->
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>

    <!--default sport-->
    <string name="none">none</string>
    <!--Attributes' names-->
    <string name="attribute_speed">Speed</string>
    <string name="attribute_power">Power</string>
    <string name="attributes_tech">Technique</string>
    <string name="attribute_fit">Fitness</string>
    <string name="attribute_fair">Fair Play</string>
    <string name="star_description">Star</string>

    <!-- Strings for formatting profiles related data -->
    <string name="format_rate"><xliff:g id="rate">%1.1f</xliff:g></string>
    <string name="format_date_dmy"><xliff:g id="day">%1</xliff:g>/<xliff:g id="month">%2</xliff:g>/<xliff:g id="year">%3</xliff:g></string>
    <string name="format_date_mdy"><xliff:g id="month">%2</xliff:g>/<xliff:g id="day">%1</xliff:g>/<xliff:g id="year">%3</xliff:g></string>
    <string name="sports_positions_title">Sports and Positions</string>
    <string name="choose_a_sport_on_edit_profile">Choose a Sport on Edit Profile</string>
    <string name="hand_default">Choose your handness on Edit Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="user_city_eg">Edit your city</string>
    <string name="user_state_eg">Edit your state</string>
    <string name="user_bd_eg">e.g.: 01/10/1987</string>
    <string name="user_height_eg">e.g.: 5\" 9\'</string>
    <string name="user_weight_eg">e.g.: 120 lbs</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
