<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|center_vertical"
    >
    <ImageView
        android:id="@+id/image_view_item"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/item_image"
        android:paddingBottom="4dp"
        tools:src="@drawable/ic_pan_tool"
        android:tint="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            tools:text="@string/user_state_eg"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/edit_text_item2"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            tools:text="@string/user_city_eg"
            android:inputType="text"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>