<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.casasw.sportclub.ui.LoginActivity"
    tools:background="@drawable/back_06"
    >



    <ImageView
        android:layout_width="@dimen/image_view_size"
        android:layout_height="@dimen/image_view_size"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/facebook_button_margin"
        android:layout_marginBottom="@dimen/facebook_button_margin" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/photo_background_protection">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"

                android:textColor="@android:color/white"
                android:paddingEnd="@dimen/name_version_padding"
                android:paddingStart="@dimen/name_version_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/help_padding"
            android:text="@string/help_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:onClick="helpOnClick"
             />
    </LinearLayout>


</LinearLayout>
