<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.casasw.sportclub.ui.EditProfileActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Toolbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/AppTheme.Toolbar"
            >
            <ImageView
                android:id="@+id/image_view_profile"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_gravity="start"
                android:contentDescription="@string/profile_photo_desc"
                tools:src="@drawable/logo"
                android:background="@android:color/transparent"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/text_view_name_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    tools:text="Sport Club User" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent">

                    <ImageView
                        android:id="@+id/image_view_star"
                        android:layout_width="@dimen/small_image_size"
                        android:layout_height="@dimen/small_image_size"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:tint="@color/colorAccent"
                        android:background="@android:color/transparent"
                        android:src="@drawable/rate_star_full"
                        android:contentDescription="@string/star_description" />
                    <TextView
                        android:id="@+id/text_view_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_padding"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        android:background="@android:color/transparent"
                        tools:text="7.0"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:id="@+id/image_text_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:gravity="start|center_vertical" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:id="@+id/image_view_item_check"
                        android:layout_width="@dimen/small_image_size"
                        android:layout_height="@dimen/small_image_size"
                        android:contentDescription="@string/item_image"
                        android:src="@drawable/ic_action_ball" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:text="@string/sports_positions_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/check_soccer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="visible"
                            android:text="@string/soccer" />

                        <CheckBox
                            android:id="@+id/check_basket"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="visible"
                            android:text="@string/basketball" />
                    </LinearLayout>

                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical">
                        <android.support.v4.widget.Space
                            android:id="@+id/center_position"
                            android:layout_width="@dimen/activity_horizontal_margin"
                            android:layout_height="0dp"
                            android:layout_centerInParent="true" />

                        <Spinner
                            android:id="@+id/spinner_soccer_pos1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@id/center_position"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            tools:text="Goalkeeper" />

                        <Spinner
                            android:id="@+id/spinner_soccer_pos2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/spinner_soccer_pos1"
                            android:layout_alignEnd="@id/center_position"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            tools:text="Center Back" />

                        <Spinner
                            android:id="@+id/spinner_basket_pos1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/center_position"
                            android:layout_alignParentEnd="true"
                            tools:text="Point Guard" />

                        <Spinner
                            android:id="@+id/spinner_basket_pos2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/spinner_basket_pos1"
                            android:layout_alignStart="@id/center_position"
                            android:layout_alignParentEnd="true"
                            tools:text="Center" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/image_view_item_hand"
                        android:layout_width="@dimen/small_image_size"
                        android:layout_height="@dimen/small_image_size"
                        android:contentDescription="@string/item_image"
                        android:src="@drawable/ic_pan_tool" />
                    <Spinner
                        android:id="@+id/spinner_hand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Right"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>



